terraform/main.tf
provider "aws" {
  region = "ap-southeast-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.10.10.0/24"
  assign_generated_ipv6_cidr_block = true
    tags = {
        Name = "ci-cd-vpc"
    }
}

resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.10.10.0/26"
  ipv6_cidr_block         = cidrsubnet(aws_vpc.main.ipv6_cidr_block, 8, 0)
  assign_ipv6_address_on_creation = true
}

resource "aws_instance" "web" {
  ami           = "ami-04173560437081c75" # Amazon Linux 2023
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.main.id
  associate_public_ip_address = true
  ipv6_address_count = 1
  tags = {
    Name = "ci-cd-instance"
  }
}
resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    ipv6_cidr_block = "::/0"
    gateway_id = aws_internet_gateway.main.id
  }  
}
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "ci-cd-internet-gateway"
  }
}
resource "aws_route_table_association" "main" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.main.id
}
resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.main.id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
